--- a/app/src/main/res/layout/fragment_volunteer_login.xml
+++ b/app/src/main/res/layout/fragment_volunteer_login.xml
@@ -1,14 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/yellow_theam"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".volunteerlogin.VolunteerLogin">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/yellow_theam"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintHeight_percent="0.6"
+
+        >
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:tint="@color/red"
+            android:scaleType="fitXY"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/bgcircle"
+
+            app:layout_constraintHeight_percent="0.45"
+            app:layout_constraintWidth_percent="0.3"
+            ></androidx.appcompat.widget.AppCompatImageView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/amplify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:text="@string/amplify"
+            android:textSize="50dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintVertical_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.1"
+
+            ></androidx.appcompat.widget.AppCompatTextView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/your"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/amplify"
+            app:layout_constraintStart_toStartOf="parent"
+
+
+            android:text="@string/your"
+            android:textSize="50dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintVertical_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.1"
+
+            ></androidx.appcompat.widget.AppCompatTextView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/potential"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/your"
+            app:layout_constraintStart_toStartOf="parent"
+
+
+            android:text="@string/potential"
+            android:textSize="50dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintVertical_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.1"
+
+            ></androidx.appcompat.widget.AppCompatTextView>
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/shamaha_logo"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/potential"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.15"
+            android:src="@drawable/logo"
+            android:tint="@color/red"
+
+            android:text="@string/potential"
+            android:textSize="50dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.1"
+
+            ></androidx.appcompat.widget.AppCompatImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/login_in_full_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+
+        android:background="@drawable/upper_side_custom_background"
+
+        app:layout_constraintHeight_percent="0.45"
+        ></androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
