victim flow almost done.... working over valunteer flow....

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,13 @@
         </item>
     </style>
 
+    <style name="Theme.Shamsaha.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Shamsaha.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Shamsaha.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
