--- a/app/src/main/res/layout/activity_volunteer_home.xml
+++ b/app/src/main/res/layout/activity_volunteer_home.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".volunteer.VolunteerHomeActivity">
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/menubar_layoout"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="@color/pink_theam"
+        android:background="@color/yellow_theam"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHeight_percent="0.075"
         >
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -26,13 +27,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/logo"
+            android:text="@string/home"
+            android:textSize="@dimen/heading_text_20sp"
+            android:fontFamily="@font/avenir_heavy"
+            android:textColor="@color/white"
 
             app:layout_constraintHeight_percent="0.6"
             app:layout_constraintWidth_percent="0.5"
 
 
-            ></androidx.appcompat.widget.AppCompatImageView>
+            ></androidx.appcompat.widget.AppCompatTextView>
 
 
 
@@ -55,15 +59,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        ></androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.constraintlayout.widget.ConstraintLayout>
