--- a/app/src/main/res/layout/fragment_volunteer_login.xml
+++ b/app/src/main/res/layout/fragment_volunteer_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/yellow_theam"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".volunteerlogin.VolunteerLogin">
+    tools:context=".volunteer.VolunteerLogin">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -128,11 +128,173 @@
         android:background="@drawable/upper_side_custom_background"
 
         app:layout_constraintHeight_percent="0.45"
-        ></androidx.constraintlayout.widget.ConstraintLayout>
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
+            android:orientation="vertical"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.9"
+
+            >
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/bhu10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="@string/sign_in"
+                android:fontFamily="@font/swissra_normal"
+                android:textSize="@dimen/heading_text_36sp"
+
+                ></androidx.appcompat.widget.AppCompatTextView>
+
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/bhu11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bhu10"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:fitsSystemWindows="false"
+                    android:background="@drawable/custom_white_input_edit_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bhu12"
+                    android:hint="@string/email_id"
+                    ></com.google.android.material.textfield.TextInputEditText>
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/bhu15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bhu11"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:fitsSystemWindows="false"
+                    android:background="@drawable/custom_white_input_edit_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bhu12"
+                    android:hint="@string/password"
+                    ></com.google.android.material.textfield.TextInputEditText>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bhu11"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.1"
+                android:src="@drawable/ic_launcher_background"
+                app:layout_constraintHorizontal_bias="0.95"
+                ></androidx.appcompat.widget.AppCompatImageView>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bhu11"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.1"
+                android:src="@drawable/ic_launcher_background"
+                app:layout_constraintHorizontal_bias="0.95"
+                ></androidx.appcompat.widget.AppCompatImageView>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bhu15"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                app:layout_constraintHeight_percent="0.3"
+                >
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/floating_action_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+
+                    app:layout_constraintWidth_percent="0.15"
+                    app:layout_constraintHeight_percent="0.6"
+                    app:layout_constraintHorizontal_bias="0.95"
+
+                    android:src="@drawable/ic_baseline_navigate_next_24_white"
+                    android:foregroundGravity="center"
+                    app:maxImageSize="45dp"
+                    android:backgroundTint="@color/pink_theam"
+
+
+
+                    ></com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/material_check_box"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/remember_me"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintHorizontal_bias="0.1"
+
+                    ></com.google.android.material.checkbox.MaterialCheckBox>
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/forgot_password"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/material_check_box"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.1"
+
+                    android:text="@string/forgot_password"
+                    ></androidx.appcompat.widget.AppCompatTextView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     
 
 
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
