--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,6 +6,9 @@
     <dimen name="heading_text_16sp">16sp</dimen>
     <dimen name="heading_text_18sp">18sp</dimen>
     <dimen name="heading_text_20sp">20sp</dimen>
+    <dimen name="heading_text_25sp">25sp</dimen>
+    <dimen name="heading_text_30sp">30sp</dimen>
+    <dimen name="heading_text_36sp">36sp</dimen>
     <dimen name="heading_text_1sp">1sp</dimen>
     <dimen name="card_corner_radious">8sp</dimen>
 </resources>
