--- a/app/src/main/res/drawable/alert_bg.xml
+++ b/app/src/main/res/drawable/alert_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/alert_message_bg"/>
+        android:color="@color/white"/>
     <corners
-        android:radius="30dp" />
+        android:radius="14dp" />
     <padding
         android:left="10dp"
         android:top="10dp"
