--- a/app/src/main/res/layout/fragment_chat_now_form.xml
+++ b/app/src/main/res/layout/fragment_chat_now_form.xml
@@ -37,6 +37,9 @@
         app:layout_constraintHeight_percent="0.85"
 
         >
+
+
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -118,6 +121,7 @@
                     android:fontFamily="@font/avenir_heavy"
                     ></androidx.appcompat.widget.AppCompatTextView>
                 <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/victimPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:layout_marginTop="10dp"
@@ -188,16 +192,23 @@
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/avenir_heavy"
                     ></androidx.appcompat.widget.AppCompatTextView>
-                <
-                    android:id="@+id/spin_country_calling_name"
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/spin_country_code"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/custom_edit_text"
 
                     android:paddingStart="20dp"
+                    app:ccp_textSize="@dimen/normal_text_12sp"
 
-                    ></>
+                    app:ccp_showFullName="true"
+                    app:ccp_showPhoneCode="false"
+                    app:ccp_showNameCode="false"
+                    app:ccp_textGravity="LEFT"
+
+
+                   ></com.hbb20.CountryCodePicker>
 
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -208,16 +219,64 @@
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/avenir_heavy"
                     ></androidx.appcompat.widget.AppCompatTextView>
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spin_issue_type"
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/custom_edit_text"
+                    android:layout_marginBottom="20dp"
 
-                    android:paddingStart="20dp"
+                    >
 
-                    ></androidx.appcompat.widget.AppCompatSpinner>
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/spin_issue_type"
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:background="@drawable/custom_edit_text"
+
+                        android:paddingStart="20dp"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+
+                        >
+
+
+                    </androidx.appcompat.widget.AppCompatSpinner>
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+
+                        app:layout_constraintHorizontal_bias="0.95"
+                        android:scaleType="fitXY"
+                        android:tint="@color/button_click_effact_color"
+
+                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
+                        ></androidx.appcompat.widget.AppCompatImageView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/chat_now_button"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="5dp"
+                    android:src="@drawable/need_help_hd"
+                    android:elevation="@dimen/heading_text_14sp"
+
+                   ></androidx.appcompat.widget.AppCompatImageView>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
