--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -12,7 +12,34 @@
         android:background="@color/purple_700">
 
 
+        <androidx.appcompat.widget.AppCompatImageView
 
+            android:id="@+id/languageChangeLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_background"
+
+            app:civ_border_color="@color/white"
+            app:civ_border_width="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintHeight_percent="0.25"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintWidth_percent="0.1"
+
+
+            >
+
+        </androidx.appcompat.widget.AppCompatImageView>
 
         <de.hdodenhof.circleimageview.CircleImageView
 
