--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -9,6 +9,7 @@
     android:layout_height="110dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
