--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="pink_theam">#F05A94</color>
     <color name="button_theam">#5E5783</color>
     <color name="yellow_theam">#FFC22C</color>
+    <color name="dark_white">#B3B2AF</color>
 </resources>
